# libdbusmenugtk4

./: .clang-format  .gitignore  .gitmodules  meson.build  run.sh
data/introspect/: com.canonical.dbusmenu.xml
include/: DBusMenu.hpp
include/Util/: GlibUtil.hpp  StringUtil.hpp
src/: dbusMenu.cpp
src/Util/: StringUtil.cpp
